[metadata]
name = searchgrid
version = 0.1
description = Helpers for building parameter grids for scikit-learn grid search
long_description = file: README.rst
author = Joel Nothman
author_email = joel.nothman@gmail.com
url = https://github.com/jnothman/searchgrid
license = BSD 3-Clause License
classifiers =
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6

[aliases]
test = pytest

[tool:pytest]
addopts = --doctest-modules --verbose --cov=searchgrid
testpaths = searchgrid.py test_searchgrid.py README.rst
doctest_optionflags = ALLOW_UNICODE

[flake8]
ignore = W503
